@@ -11,7 +11,7 @@ cell_data <- load_cellSNP_vcf(cell_vcf,
                               max_other_allele = NULL, 
                               min_count = 0, min_MAF = 0)
 donor_GT <- load_GT_vcf(donor_vcf)
-row.names(donor_GT) <- paste0("chr", row.names(donor_GT)) #not always necessary
+rownames(donor_GT$GT) <- paste0("chr", rownames(donor_GT$GT)) #not always necessary
 
 test_that("load_cellSNP_vcf works as expected", {
     expect_is(cell_data$A, "dgCMatrix")
@@ -20,7 +20,7 @@ test_that("load_cellSNP_vcf works as expected", {
 })
 
 test_that("load_GT_vcf works as expected", {
-    expect_is(donor_GT, "matrix")
+    expect_is(donor_GT$GT, "matrix")
 })
 
 test_that("vireo without known donor GT works as expected", {
@@ -30,7 +30,7 @@ test_that("vireo without known donor GT works as expected", {
 })
 
 test_that("vireo with known donor GT works as expected", {
-    ids2 <- vireo(cell_data = cell_data, donor_data = donor_GT)
+    ids2 <- vireo(cell_data = cell_data, donor_data = donor_GT$GT)
     print(table(ids2$assigned$donor_id))
     expect_is(ids2, "list")
 })
